@@ -513,3 +513,27 @@ task(afterEclipseImport).doLast {
     f.append('encoding//src/main/resources/dictionary_zh_CN.properties=UTF-8\n')
     f.append('encoding//src/main/resources/dictionary_zh_TW.properties=UTF-8\n')
 }
+
+task appImage(type: Exec) {
+    workingDir "${projectDir}"
+    commandLine 'jpackage', '--input', 'build/osgi/', '--name', 'muCommander', '--app-version', project.version, '--icon', 'package/osx/icon.icns', '--main-jar', 'mucommander-'+project.version+'.jar', '--main-class', 'com.mucommander.main.muCommander', '--runtime-image', 'jre/macOS', '--java-options', '--add-exports java.desktop/com.apple.laf=ALL-UNNAMED --add-exports java.desktop/com.apple.eawt=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.transaction.xa/javax.transaction.xa=ALL-UNNAMED --add-opens java.management/javax.management=ALL-UNNAMED --add-opens java.rmi/java.rmi=ALL-UNNAMED --add-opens java.security.jgss/org.ietf.jgss=ALL-UNNAMED --add-opens java.sql/java.sql=ALL-UNNAMED', '--mac-package-identifier', 'com.mucommander.muCommander', '--type', 'app-image', '--dest', "${buildDir}"
+}
+
+appImage.doLast {
+   copy {
+       from "package"
+       include "license.txt"
+       include "readme.txt"
+       into "${buildDir}/muCommander.app/Contents"
+   }
+   delete("${buildDir}/muCommander.app/Contents/app/run.bat")
+   delete("${buildDir}/muCommander.app/Contents/app/run.sh")
+   delete("${buildDir}/muCommander.app/Contents/app/system-libs")
+   // todo: add NSSupportsAutomaticGraphicsSwitching?
+}
+
+// after adding <key>NSSupportsAutomaticGraphicsSwitching</key><true/>
+task dmg(type: Exec) {
+    workingDir "${projectDir}"
+    commandLine 'jpackage', '--app-image', "${buildDir}/muCommander.app", '--app-version', project.version, '--license-file', 'package/license.txt', '--about-url', 'https://www.mucommander.com', '--dest', "${buildDir}/distribution"
+}
